update image in css

--- a/css/styles.css
+++ b/css/styles.css
@@ -380,7 +380,7 @@ ol, ul {
 footer {
     width: 100%;
     background: linear-gradient(rgba(0, 0, 0, 0.96), rgba(0, 0, 0, 0.96)), 
-    url(../imgs/slider/bb6f8e51f3d8f6ce0be93f409cac289b.png);
+    url(../imgs/slider/bb6f8e51f3d8f6ce0be93f409cac289b.webp);
     background-position: center top;
     color: #ffffff;
     margin-top: 5%;
